--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img src="./icon/meganedansi.png">
             <div class="modal-fukidasi-megane" id ="megane-serifu">
               <p class="modal-serifu-megane" >ここを探してみな。見つけたら教えて</p>
-              <img src="./icon/fukidasi_opa.png">
+              <img src="./icon/fukidasi2.png">
             </div>
          </div>
         </div>
@@ -63,7 +63,7 @@
               <img class="ikari" src="./icon/青筋アイコン.png">
             </div>
             <div class="fukidasi-miffy">
-              <img src="./icon/fukidasi_opa.png">
+              <img src="./icon/fukidasi2.png">
               <div class="serifu-miffy">
                 <p class="serifu-p">タイトルをタップしてね</p>
               </div>
@@ -86,7 +86,7 @@
       <div class="container">
         <div class="present">
           <div class="megane">
-            <img src="./icon/meganedansi.png">
+            <img src="./icon/meganedansi.png" id="megane-click">
             <div class="emote-megane">
               <img class="hart-megane" src="./icon/hart.png">
               <img class="namida-megane" src="./icon/namida.png">
@@ -95,7 +95,7 @@
               <img class="ikari-megane" src="./icon/青筋アイコン.png">
             </div>
             <div class="fukidasi-megane">
-              <img src="./icon/fukidasi_opa.png">
+              <img src="./icon/fukidasi2.png">
               <div class="serifu-megane">
                 <p class="megane-serifu-p">下の絵からプレゼントを探してタップしてください</p>
               </div>
