--- a/index.html
+++ b/index.html
@@ -133,8 +133,10 @@
             <area class="click hazure" target="" alt="プレゼントはずれ" title="プレゼント" href="#" coords="118,377,129,395" shape="rect">
             <area class="click hazure" target="" alt="プレゼントはずれ" title="プレゼント" href="#" coords="343,380,362,409" shape="rect">
             <area class="click hit" target="" alt="当り" title="プレゼント" href="#" coords="246,292,262,316" shape="rect">
-          </map>               
+          </map>
+          <div class="kotae hit">こたえ</div>               
         </div>
+        
       </div>
     </div>
 
